# Shooter2D

./: Animation.cpp  Animation.h  Animator.cpp  Animator.h  Bullet.cpp  Bullet.h  CMakeLists.txt  Constants.h  Controls.cpp  Controls.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Level.cpp  Level.h  PhysicalObject.cpp  PhysicalObject.h  Pistol.h  Player.cpp  Player.h  StaticObject.cpp  StaticObject.h  Vfx.cpp  Vfx.h  Weapon.cpp  Weapon.h  main.cpp  renderer.cpp  renderer.h
box2d-main/: box2d-config.cmake
resources/SFML/Frameworks/SFML.framework/Versions/2.5.1/Resources/CMake/: SFMLSharedTargets.cmake
resources/SFML/include/SFML/Graphics/: Texture.hpp
resources/box2d-main/: CMakeLists.txt
resources/box2d-main/include/box2d/: b2_polygon_shape.h
resources/constants/: default_block_animations.anim  default_enemy_animations.anim  default_player_animations.anim
resources/levels/: first.lvl  second.lvl  third.lvl
